Fix letter-spacing to Hero component, Add DesktopPreview component

--- a/src/components/Hero/Hero.scss
+++ b/src/components/Hero/Hero.scss
@@ -19,6 +19,9 @@
             max-width: 780px;
             text-align: center;
             margin-top: 30px;
+            p {
+                letter-spacing: 0.5px;
+            }
         }
         &-buttons {
             margin-top: 40px;
